# cmr

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  NEWS  README  TODO  URI  algorithm_8hpp.html  algorithm_8hpp_source.html  annotated.html  autogen.sh  balanced.html  balanced_8c.html  balanced_8h.html  balanced_8h_source.html  balanced_8md.html  binary__linear__space_8hpp.html  binary__linear__space_8hpp_source.html  binary_regular.html  bipartite__graph_8c.html  bipartite__graph_8h.html  bipartite__graph_8h_source.html  bipartite__graph__bfs_8hpp.html  bipartite__graph__bfs_8hpp_source.html  block__decomposition_8c.html  block__decomposition_8h.html  block__decomposition_8h_source.html  build.html  build_8md.html  camion.html  camion_8c.html  camion_8h.html  camion_8h_source.html  camion_8md.html  camion__internal_8h.html  camion__internal_8h_source.html  changes.html  (+971 more)
.github/workflows/: ci-sage.yml  (+2 more)
build-debug-generators/: CMRTargets.cmake  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmr-camion  cmr-ctu  cmr-generate-graphic  cmr-generate-network  cmr-generate-random  cmr-generate-series-parallel  cmr-graphic  cmr-k-ary  cmr-k-modular  cmr-matrix  cmr-network  cmr-perturb-random  cmr-regular  cmr-series-parallel  cmr-tu
cmake/: CMRConfig.cmake.in  FindGMP.cmake  FindGTestGit.cmake  FindGTestSources.cmake  FindGUROBI.cmake  TUConfig.cmake.in
doc/: BALANCED.md  CMakeLists.txt  FILEFORMATS.md  GRAPHIC.md  INDEX.md  NETWORK.md  PERFECT.md  README.md  REGULAR.md  SP.md  TEMPLATE.md  TU.md  balanced.md  build.md  camion.md  changes.md  consecutive-ones.md  conversions.md  ctu.md  entries.md  equimodular.md  file-formats.md  generators.md  graphic.md  index.md  k-modular.md  k_ary.md  matroids.md  max-flow-min-cut.md  named.md  network.md  perfect.md  regular.md  series-parallel.md  seymour.md  staircase-compatibility.md  totally-balanced.md  tu.md  utilities.md
docs/: main.tex  references.bib
examples/: test-2-modular.pl  test-nothing.pl
experiments/: config.py  config_modwheel.py  config_network.py  config_rndcamion.py  eval_modwheel.py  eval_parse.py  gen_modwheel.py  gen_modwheel.sbatch  gen_network.py  gen_network.sbatch  gen_oddcycle01.py  gen_random_camion.py  gen_rndcamion.py  gen_rndcamion.sbatch  graphic.py  run_modwheel.py  run_modwheel.sbatch  run_network.py  run_network.sbatch  run_rndcamion.py  run_rndcamion.sbatch  series_parallel.py
include/: gcd.hpp  matrix_transposed.hpp  matroid_graph.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+141 more)
src/: Makefile.am  algorithm.hpp  binary_linear_space.hpp  bipartite_graph_bfs.hpp  common.hpp  comparators.hpp  determinant.cpp  enumeration.hpp  find_minor_sequence.hpp  find_wheel_minor.hpp  gcd.hpp  gen_cycle_violator.hpp  gen_generic.hpp  gen_main.cpp  gen_network.hpp  gen_random.hpp  ghouila_houri.cpp  graph_utils.hpp  graphicness.hpp  linear_algebra.hpp  logger.cpp  logger.hpp  matrix.hpp  matrix_gen_main.cpp  matrix_modified.hpp  matrix_permuted.hpp  matrix_reorder.hpp  matrix_transposed.hpp  matroid.hpp  matroid_decomposition.cpp  matroid_decomposition.hpp  matroid_graph.cpp  matroid_graph.hpp  matroid_permuted.hpp  matroid_reorder.hpp  matroid_separate.hpp  matroid_transposed.hpp  nested_minor_sequence.cpp  nested_minor_sequence.hpp  partition.hpp  (+18 more)
src/boost/graph/: bipartite.hpp
src/cmr/: algorithm.hpp  balanced.c  binary_linear_space.hpp  bipartite_graph.c  bipartite_graph.h  bipartite_graph_bfs.hpp  block_decomposition.c  block_decomposition.h  camion.c  camion_internal.h  combinations.hpp  comparators.hpp  ctu.c  dec.c  dec_internal.h  decomposition.c  decomposition_internal.h  densematrix.c  densematrix.h  determinant.cpp  element.c  enumeration.hpp  env.c  env_internal.h  equimodular.c  find_minor_sequence.hpp  find_wheel_minor.hpp  gcd.hpp  gen_cycle_violator.hpp  gen_network.hpp  ghouila_houri.cpp  graph.c  graph_utils.hpp  graphic.c  graphic_internal.h  graphicness.hpp  hashtable.c  hashtable.h  heap.c  heap.h  (+80 more)
src/main/: balanced_main.c  camion_main.c  convert_matrix_main.c  ctu_main.c  entries_main.c  equimodular_main.c  graphic_main.c  k_ary_main.c  k_modular_main.c  main.cpp  matrix_main.c  named_main.c  network_main.c  random_network.c  regular_main.c  series_parallel_main.c  totally_unimodular_main.c  tu_main.c
src/test/: convert_matrix_main.c  graph_matrix_main.c  graphic_column_submatrix.c  graphic_main.c  main.c  main.cpp  random_network.c  series_parallel_main.c  sign_main.c  test_main.c  totally_unimodular_main.c  tu_main.c
src/tu/: algorithm.hpp  binary_linear_space.hpp  bipartite_graph_bfs.hpp  bixby_wagner.c  bixby_wagner.h  combinations.hpp  comparators.hpp  decomposition.c  decomposition_internal.h  determinant.cpp  element.c  enumeration.hpp  env.c  env_internal.h  find_minor_sequence.hpp  find_wheel_minor.hpp  gen_cycle_violator.hpp  gen_generic.hpp  gen_network.hpp  gen_random.hpp  ghouila_houri.cpp  graph.c  graph_utils.hpp  graphic.c  graphicness.hpp  hashtable.c  hashtable.h  heap.c  heap.h  logger.cpp  logger.hpp  matrix.c  matrix.cpp  matrix_gen_main.cpp  matrix_internal.h  matrix_modified.hpp  matrix_reorder.hpp  matrix_transposed_permuted.hpp  matroid.c  matroid.hpp  (+35 more)
test/: CMakeLists.txt  common.c  common.cpp  common.h  common.hpp  test_balanced.cpp  test_block_decomposition.cpp  test_camion.cpp  test_ctu.cpp  test_equimodular.cpp  test_graph.cpp  test_graphic.cpp  test_hashtable.cpp  test_linalg.cpp  test_main.cpp  test_matrix.cpp  test_matroid.cpp  test_network.cpp  test_one_sum.cpp  test_regular.cpp  test_separation.cpp  test_series_parallel.cpp  test_sign.cpp  test_tdec.cpp  test_tu.cpp
(+688 files in other folders)
